--- a/configuration/advanced-settings.mdx
+++ b/configuration/advanced-settings.mdx
@@ -1,219 +1,199 @@
 ---
 title: Advanced Settings
-description: "Configure QA.tech for advanced use cases including environment variables, CLI options, CI/CD integration, and test optimization"
+description: "Configure QA.tech for advanced use cases including AI agent settings, project configuration, and integration options"
 icon: wrench
 ---
 
 # Advanced Configuration
 
-QA.tech provides extensive configuration options for advanced users who need fine-grained control over testing behavior, integration with complex environments, and optimization for specific use cases.
+QA.tech provides extensive configuration options for advanced users who need fine-grained control over AI agent behavior, project settings, and integration capabilities. Learn how to optimize your AI-powered testing setup.
 
-## Environment Variables
+## Project Settings
 
-QA.tech supports various environment variables for customizing behavior across different environments.
+### Core Project Configuration
 
-### Core Environment Variables
+Access your project settings in the QA.tech web interface:
 
-```bash
-# Authentication and API
-QA_TECH_API_KEY=your_api_key_here
-QA_TECH_PROJECT_ID=your_project_id
+<Steps>
+  <Step title="Navigate to Settings">
+    Go to app.qa.tech and select your project
+    Click on the "Settings" icon in the left sidebar
+    Select "General" under Project settings
+  </Step>
+  <Step title="Configure Project Details">
+    Update your project name and description
+    Set project visibility and access controls
+    Configure project-specific settings
+    Save your changes
+  </Step>
+  <Step title="Manage Applications">
+    Add your application URLs
+    Configure environment settings
+    Set up authentication if needed
+    Test application connectivity
+  </Step>
+</Steps>
 
-# Test Execution
-QA_TECH_TIMEOUT=30000
-QA_TECH_RETRY_COUNT=3
-QA_TECH_SCREENSHOT_ON_FAILURE=true
-QA_TECH_VIDEO_RECORDING=true
+### Application Configuration
 
-# Browser Configuration
-QA_TECH_BROWSER=chrome
-QA_TECH_HEADLESS=true
-QA_TECH_VIEWPORT_WIDTH=1920
-QA_TECH_VIEWPORT_HEIGHT=1080
+Configure your applications for AI testing:
 
-# Network Settings
-QA_TECH_NETWORK_TIMEOUT=60000
-QA_TECH_PROXY_URL=http://proxy.company.com:8080
-QA_TECH_PROXY_USERNAME=proxy_user
-QA_TECH_PROXY_PASSWORD=proxy_pass
-```
-
-### Environment-Specific Variables
-
-#### **Development Environment**
-```bash
-# Development settings
-QA_TECH_ENVIRONMENT=development
-QA_TECH_BASE_URL=https://dev.example.com
-QA_TECH_DEBUG_MODE=true
-QA_TECH_LOG_LEVEL=debug
-QA_TECH_TEST_DATA_PATH=./test-data/dev
-```
-
-#### **Staging Environment**
-```bash
-# Staging settings
-QA_TECH_ENVIRONMENT=staging
-QA_TECH_BASE_URL=https://staging.example.com
-QA_TECH_DEBUG_MODE=false
-QA_TECH_LOG_LEVEL=info
-QA_TECH_TEST_DATA_PATH=./test-data/staging
-```
-
-#### **Production Environment**
-```bash
-# Production settings
-QA_TECH_ENVIRONMENT=production
-QA_TECH_BASE_URL=https://example.com
-QA_TECH_DEBUG_MODE=false
-QA_TECH_LOG_LEVEL=warn
-QA_TECH_TEST_DATA_PATH=./test-data/prod
-```
-
-### Advanced Environment Variables
-
-```bash
-# Performance Optimization
-QA_TECH_PARALLEL_EXECUTION=true
-QA_TECH_MAX_CONCURRENT_TESTS=5
-QA_TECH_MEMORY_LIMIT=2048
-QA_TECH_CPU_LIMIT=2
-
-# Security Settings
-QA_TECH_SSL_VERIFY=true
-QA_TECH_CERT_PATH=/path/to/certificates
-QA_TECH_INSECURE_SSL=false
-
-# Custom Configuration
-QA_TECH_CUSTOM_HEADERS={"X-Test-Mode": "true"}
-QA_TECH_USER_AGENT="QA.tech Test Runner/1.0"
-QA_TECH_COOKIES_PATH=./cookies.json
-```
-
-## CLI Configuration
-
-QA.tech provides a command-line interface for advanced users and automation scenarios.
-
-### Basic CLI Usage
-
-```bash
-# Install QA.tech CLI
-npm install -g @qa-tech/cli
-
-# Authenticate with API key
-qa-tech login --api-key YOUR_API_KEY
-
-# List projects
-qa-tech projects list
-
-# Run a specific test
-qa-tech tests run --project-id proj_123 --test-id test_456
-
-# Run all tests in a project
-qa-tech tests run-all --project-id proj_123
-```
-
-### Advanced CLI Options
-
-```bash
-# Run tests with custom configuration
-qa-tech tests run \
-  --project-id proj_123 \
-  --test-id test_456 \
-  --environment staging \
-  --timeout 60000 \
-  --retry-count 3 \
-  --screenshot-on-failure \
-  --video-recording
-
-# Run tests in parallel
-qa-tech tests run-parallel \
-  --project-id proj_123 \
-  --max-concurrent 5 \
-  --test-pattern "login*"
-
-# Export test results
-qa-tech tests export \
-  --project-id proj_123 \
-  --format json \
-  --output results.json
-
-# Generate test report
-qa-tech reports generate \
-  --project-id proj_123 \
-  --start-date 2024-01-01 \
-  --end-date 2024-01-31 \
-  --format html
-```
-
-### Configuration File
-
-Create a `qa-tech.config.js` file for persistent configuration:
-
-```javascript
-module.exports = {
-  // API Configuration
-  apiKey: process.env.QA_TECH_API_KEY,
-  projectId: process.env.QA_TECH_PROJECT_ID,
-  
-  // Test Execution
-  timeout: 30000,
-  retryCount: 3,
-  screenshotOnFailure: true,
-  videoRecording: true,
-  
-  // Browser Settings
-  browser: 'chrome',
-  headless: true,
-  viewport: {
-    width: 1920,
-    height: 1080
-  },
-  
-  // Network Configuration
-  networkTimeout: 60000,
-  proxy: {
-    url: process.env.QA_TECH_PROXY_URL,
-    username: process.env.QA_TECH_PROXY_USERNAME,
-    password: process.env.QA_TECH_PROXY_PASSWORD
-  },
-  
-  // Performance Settings
-  parallelExecution: true,
-  maxConcurrentTests: 5,
-  
-  // Custom Headers
-  headers: {
-    'X-Test-Mode': 'true',
-    'User-Agent': 'QA.tech Test Runner/1.0'
-  },
-  
-  // Environment-specific settings
-  environments: {
-    development: {
-      baseUrl: 'https://dev.example.com',
-      debugMode: true,
-      logLevel: 'debug'
+```json
+{
+  "applications": {
+    "main-app": {
+      "url": "https://your-app.com",
+      "environment": "production",
+      "authentication": {
+        "type": "username_password",
+        "username": "test@example.com",
+        "password": "secure_password"
+      }
     },
-    staging: {
-      baseUrl: 'https://staging.example.com',
-      debugMode: false,
-      logLevel: 'info'
-    },
-    production: {
-      baseUrl: 'https://example.com',
-      debugMode: false,
-      logLevel: 'warn'
+    "staging-app": {
+      "url": "https://staging.your-app.com",
+      "environment": "staging",
+      "authentication": {
+        "type": "username_password",
+        "username": "test@staging.com",
+        "password": "staging_password"
+      }
     }
   }
-};
+}
 ```
 
-## CI/CD Integration
+## AI Agent Configuration
 
-### GitHub Actions
+### Optimizing AI Agent Behavior
 
-#### **Basic GitHub Actions Workflow**
+Configure how the AI agent interacts with your application:
+
+<Steps>
+  <Step title="Set AI Agent Preferences">
+    Configure AI behavior settings:
+    - Set interaction timeouts
+    - Configure retry attempts
+    - Define wait strategies
+    - Set element selection preferences
+  </Step>
+  <Step title="Customize AI Decision Making">
+    Help the AI understand your application:
+    - Provide application context
+    - Define business logic rules
+    - Specify validation requirements
+    - Set up custom workflows
+  </Step>
+  <Step title="Configure AI Learning">
+    Enable AI learning features:
+    - Allow AI to learn from successful tests
+    - Configure pattern recognition
+    - Set up adaptive behavior
+    - Enable continuous improvement
+  </Step>
+</Steps>
+
+### AI Agent Settings
+
+```json
+{
+  "ai_agent": {
+    "timeout": 30000,
+    "retry_attempts": 3,
+    "wait_strategy": "intelligent",
+    "element_selection": "semantic",
+    "learning_enabled": true,
+    "adaptive_behavior": true,
+    "context_awareness": true
+  }
+}
+```
+
+## Test Plan Management
+
+### Advanced Test Plan Configuration
+
+Configure test plans for different scenarios:
+
+<Steps>
+  <Step title="Create Test Plans">
+    Organize your tests:
+    - Create test plan categories
+    - Set up test priorities
+    - Configure execution schedules
+    - Define test dependencies
+  </Step>
+  <Step title="Configure Test Execution">
+    Set execution parameters:
+    - Define parallel execution limits
+    - Set up retry policies
+    - Configure timeout settings
+    - Enable performance monitoring
+  </Step>
+  <Step title="Manage Test Data">
+    Configure test data:
+    - Set up test accounts
+    - Define test scenarios
+    - Configure data isolation
+    - Enable data cleanup
+  </Step>
+</Steps>
+
+### Test Plan Configuration
+
+```json
+{
+  "test_plans": {
+    "critical_paths": {
+      "description": "Critical user journey tests",
+      "priority": "high",
+      "execution": {
+        "parallel": true,
+        "max_concurrent": 3,
+        "retry_failed": true,
+        "timeout": 60000
+      },
+      "data": {
+        "accounts": ["test_user_1", "test_user_2"],
+        "scenarios": ["happy_path", "error_cases"],
+        "cleanup": "automatic"
+      }
+    }
+  }
+}
+```
+
+## Integration Settings
+
+### GitHub Actions Integration
+
+Configure automated test execution:
+
+<Steps>
+  <Step title="Set Up GitHub Actions">
+    Configure CI/CD integration:
+    - Add QA.tech action to workflows
+    - Configure API tokens
+    - Set up test plan triggers
+    - Enable result reporting
+  </Step>
+  <Step title="Configure Triggers">
+    Set up automated triggers:
+    - Push to main branch
+    - Pull request creation
+    - Scheduled runs
+    - Manual triggers
+  </Step>
+  <Step title="Handle Results">
+    Configure result handling:
+    - Set up notifications
+    - Configure status checks
+    - Enable detailed reporting
+    - Handle test failures
+  </Step>
+</Steps>
+
+### GitHub Action Configuration
 
 ```yaml
 name: QA.tech Tests
@@ -227,96 +207,19 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-        
-    - name: Install QA.tech CLI
-      run: npm install -g @qa-tech/cli
-      
     - name: Run QA.tech Tests
-      run: |
-        qa-tech login --api-key ${{ secrets.QA_TECH_API_KEY }}
-        qa-tech tests run-all --project-id ${{ secrets.QA_TECH_PROJECT_ID }}
-      env:
-        QA_TECH_ENVIRONMENT: staging
-        QA_TECH_TIMEOUT: 60000
-        QA_TECH_RETRY_COUNT: 3
+      uses: QAdottech/run-action@v2
+      with:
+        project_id: ${{ secrets.QATECH_PROJECT_ID }}
+        api_token: ${{ secrets.QATECH_API_TOKEN }}
+        test_plan_short_id: 'jgbinp'
+        blocking: true
 ```
 
-#### **Advanced GitHub Actions Workflow**
+### GitLab CI Integration
 
-```yaml
-name: QA.tech Advanced Testing
-
-on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main ]
-  schedule:
-    - cron: '0 2 * * *'  # Daily at 2 AM
-
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    
-    strategy:
-      matrix:
-        environment: [staging, production]
-        browser: [chrome, firefox]
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-        
-    - name: Install QA.tech CLI
-      run: npm install -g @qa-tech/cli
-      
-    - name: Run Tests
-      run: |
-        qa-tech login --api-key ${{ secrets.QA_TECH_API_KEY }}
-        qa-tech tests run-parallel \
-          --project-id ${{ secrets.QA_TECH_PROJECT_ID }} \
-          --environment ${{ matrix.environment }} \
-          --browser ${{ matrix.browser }} \
-          --max-concurrent 3
-      env:
-        QA_TECH_TIMEOUT: 60000
-        QA_TECH_RETRY_COUNT: 3
-        QA_TECH_SCREENSHOT_ON_FAILURE: true
-        QA_TECH_VIDEO_RECORDING: true
-        
-    - name: Generate Report
-      run: |
-        qa-tech reports generate \
-          --project-id ${{ secrets.QA_TECH_PROJECT_ID }} \
-          --format html \
-          --output test-report.html
-      if: always()
-      
-    - name: Upload Test Results
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-results-${{ matrix.environment }}-${{ matrix.browser }}
-        path: test-report.html
-      if: always()
-```
-
-### GitLab CI
-
-#### **Basic GitLab CI Configuration**
+Configure GitLab CI/CD integration:
 
 ```yaml
 stages:
@@ -326,557 +229,397 @@ qa-tech-tests:
   stage: test
   image: node:18
   before_script:
-    - npm install -g @qa-tech/cli
-    - qa-tech login --api-key $QA_TECH_API_KEY
+    - echo "QA.tech tests will be executed via GitHub Actions"
   script:
-    - qa-tech tests run-all --project-id $QA_TECH_PROJECT_ID
+    - echo "Using QA.tech cloud-based testing platform"
   environment:
     name: staging
   variables:
     QA_TECH_ENVIRONMENT: staging
     QA_TECH_TIMEOUT: 60000
     QA_TECH_RETRY_COUNT: 3
-  artifacts:
-    reports:
-      junit: test-results.xml
-    paths:
-      - test-report.html
-    expire_in: 1 week
 ```
 
-#### **Advanced GitLab CI Configuration**
+## Environment Management
 
-```yaml
-stages:
-  - test
-  - report
+### Multi-Environment Configuration
 
-variables:
-  QA_TECH_TIMEOUT: 60000
-  QA_TECH_RETRY_COUNT: 3
-  QA_TECH_SCREENSHOT_ON_FAILURE: "true"
-  QA_TECH_VIDEO_RECORDING: "true"
+Set up different environments for testing:
 
-.qa-tech-template: &qa-tech-template
-  image: node:18
-  before_script:
-    - npm install -g @qa-tech/cli
-    - qa-tech login --api-key $QA_TECH_API_KEY
+<Steps>
+  <Step title="Configure Environments">
+    Set up environment-specific settings:
+    - Development environment
+    - Staging environment
+    - Production environment
+    - Test environment
+  </Step>
+  <Step title="Environment-Specific Settings">
+    Configure per-environment:
+    - Application URLs
+    - Authentication credentials
+    - Test data sets
+    - Performance settings
+  </Step>
+  <Step title="Environment Validation">
+    Validate environment setup:
+    - Test connectivity
+    - Verify authentication
+    - Check application state
+    - Validate test data
+  </Step>
+</Steps>
 
-qa-tech-staging:
-  <<: *qa-tech-template
-  stage: test
-  script:
-    - qa-tech tests run-parallel --project-id $QA_TECH_PROJECT_ID --environment staging --max-concurrent 3
-  environment:
-    name: staging
-  artifacts:
-    paths:
-      - test-results-staging/
-    expire_in: 1 week
+### Environment Configuration
 
-qa-tech-production:
-  <<: *qa-tech-template
-  stage: test
-  script:
-    - qa-tech tests run-parallel --project-id $QA_TECH_PROJECT_ID --environment production --max-concurrent 3
-  environment:
-    name: production
-  when: manual
-  artifacts:
-    paths:
-      - test-results-production/
-    expire_in: 1 week
-
-generate-report:
-  <<: *qa-tech-template
-  stage: report
-  script:
-    - qa-tech reports generate --project-id $QA_TECH_PROJECT_ID --format html --output test-report.html
-  artifacts:
-    paths:
-      - test-report.html
-    expire_in: 1 month
-  dependencies:
-    - qa-tech-staging
-    - qa-tech-production
-```
-
-### Jenkins Pipeline
-
-#### **Basic Jenkins Pipeline**
-
-```groovy
-pipeline {
-    agent any
-    
-    environment {
-        QA_TECH_API_KEY = credentials('qa-tech-api-key')
-        QA_TECH_PROJECT_ID = 'proj_123'
-        QA_TECH_ENVIRONMENT = 'staging'
-    }
-    
-    stages {
-        stage('Setup') {
-            steps {
-                sh 'npm install -g @qa-tech/cli'
-                sh 'qa-tech login --api-key $QA_TECH_API_KEY'
-            }
-        }
-        
-        stage('Run Tests') {
-            steps {
-                sh '''
-                    qa-tech tests run-all \
-                        --project-id $QA_TECH_PROJECT_ID \
-                        --environment $QA_TECH_ENVIRONMENT \
-                        --timeout 60000 \
-                        --retry-count 3
-                '''
-            }
-        }
-        
-        stage('Generate Report') {
-            steps {
-                sh '''
-                    qa-tech reports generate \
-                        --project-id $QA_TECH_PROJECT_ID \
-                        --format html \
-                        --output test-report.html
-                '''
-                publishHTML([
-                    allowMissing: false,
-                    alwaysLinkToLastBuild: true,
-                    keepAll: true,
-                    reportDir: '.',
-                    reportFiles: 'test-report.html',
-                    reportName: 'QA.tech Test Report'
-                ])
-            }
-        }
-    }
-    
-    post {
-        always {
-            archiveArtifacts artifacts: 'test-report.html', fingerprint: true
-        }
-    }
-}
-```
-
-#### **Advanced Jenkins Pipeline**
-
-```groovy
-pipeline {
-    agent any
-    
-    environment {
-        QA_TECH_API_KEY = credentials('qa-tech-api-key')
-        QA_TECH_PROJECT_ID = 'proj_123'
-    }
-    
-    parameters {
-        choice(
-            name: 'ENVIRONMENT',
-            choices: ['staging', 'production'],
-            description: 'Select environment to test'
-        )
-        booleanParam(
-            name: 'PARALLEL_EXECUTION',
-            defaultValue: true,
-            description: 'Run tests in parallel'
-        )
-        string(
-            name: 'TEST_PATTERN',
-            defaultValue: '*',
-            description: 'Test pattern to run'
-        )
-    }
-    
-    stages {
-        stage('Setup') {
-            steps {
-                sh 'npm install -g @qa-tech/cli'
-                sh 'qa-tech login --api-key $QA_TECH_API_KEY'
-            }
-        }
-        
-        stage('Run Tests') {
-            parallel {
-                stage('Chrome Tests') {
-                    steps {
-                        sh '''
-                            qa-tech tests run-parallel \
-                                --project-id $QA_TECH_PROJECT_ID \
-                                --environment $ENVIRONMENT \
-                                --browser chrome \
-                                --test-pattern "$TEST_PATTERN" \
-                                --max-concurrent 3
-                        '''
-                    }
-                }
-                stage('Firefox Tests') {
-                    steps {
-                        sh '''
-                            qa-tech tests run-parallel \
-                                --project-id $QA_TECH_PROJECT_ID \
-                                --environment $ENVIRONMENT \
-                                --browser firefox \
-                                --test-pattern "$TEST_PATTERN" \
-                                --max-concurrent 3
-                        '''
-                    }
-                }
-            }
-        }
-        
-        stage('Generate Report') {
-            steps {
-                sh '''
-                    qa-tech reports generate \
-                        --project-id $QA_TECH_PROJECT_ID \
-                        --environment $ENVIRONMENT \
-                        --format html \
-                        --output test-report-$ENVIRONMENT.html
-                '''
-                publishHTML([
-                    allowMissing: false,
-                    alwaysLinkToLastBuild: true,
-                    keepAll: true,
-                    reportDir: '.',
-                    reportFiles: "test-report-$ENVIRONMENT.html",
-                    reportName: "QA.tech Test Report - $ENVIRONMENT"
-                ])
-            }
-        }
-    }
-    
-    post {
-        always {
-            archiveArtifacts artifacts: "test-report-$ENVIRONMENT.html", fingerprint: true
-        }
-        success {
-            emailext (
-                subject: "QA.tech Tests Passed - $ENVIRONMENT",
-                body: "All tests passed successfully for environment: $ENVIRONMENT",
-                to: 'team@example.com'
-            )
-        }
-        failure {
-            emailext (
-                subject: "QA.tech Tests Failed - $ENVIRONMENT",
-                body: "Some tests failed for environment: $ENVIRONMENT. Check the Jenkins build for details.",
-                to: 'team@example.com'
-            )
-        }
-    }
-}
-```
-
-## Test Configuration Options
-
-### Browser Configuration
-
-```javascript
-// Browser settings
-const browserConfig = {
-  // Browser selection
-  browser: 'chrome', // 'chrome', 'firefox', 'safari', 'edge'
-  
-  // Headless mode
-  headless: true,
-  
-  // Viewport settings
-  viewport: {
-    width: 1920,
-    height: 1080
-  },
-  
-  // Browser arguments
-  args: [
-    '--no-sandbox',
-    '--disable-dev-shm-usage',
-    '--disable-web-security',
-    '--disable-features=VizDisplayCompositor'
-  ],
-  
-  // User agent
-  userAgent: 'QA.tech Test Runner/1.0',
-  
-  // Device emulation
-  device: {
-    name: 'iPhone 12',
-    userAgent: 'Mozilla/5.0 (iPhone; CPU iPhone OS 14_0 like Mac OS X)',
-    viewport: {
-      width: 390,
-      height: 844
-    }
-  }
-};
-```
-
-### Network and Performance Configuration
-
-```javascript
-// Network settings
-const networkConfig = {
-  // Timeouts
-  timeout: 30000,
-  navigationTimeout: 30000,
-  waitTimeout: 10000,
-  
-  // Network conditions
-  networkConditions: {
-    offline: false,
-    downloadThroughput: 1024 * 1024, // 1MB/s
-    uploadThroughput: 1024 * 1024,   // 1MB/s
-    latency: 100 // 100ms
-  },
-  
-  // Request interception
-  interceptRequests: true,
-  blockPatterns: [
-    '*.google-analytics.com',
-    '*.facebook.com',
-    '*.doubleclick.net'
-  ],
-  
-  // Cache settings
-  cacheEnabled: false,
-  clearCacheOnNavigation: true
-};
-```
-
-### Test Data Management
-
-```javascript
-// Test data configuration
-const testDataConfig = {
-  // Data sources
-  dataSources: {
-    users: './test-data/users.json',
-    products: './test-data/products.json',
-    orders: './test-data/orders.json'
-  },
-  
-  // Data generation
-  generateData: {
-    enabled: true,
-    patterns: {
-      email: 'test-{random}@example.com',
-      phone: '+1-555-{random}-{random}',
-      name: 'Test User {random}'
-    }
-  },
-  
-  // Data cleanup
-  cleanup: {
-    enabled: true,
-    afterTest: true,
-    afterSuite: true,
-    methods: ['delete', 'reset', 'archive']
-  }
-};
-```
-
-## Flaky Test Handling
-
-### Retry Configuration
-
-```javascript
-// Retry settings
-const retryConfig = {
-  // Basic retry
-  retryCount: 3,
-  retryDelay: 2000,
-  
-  // Advanced retry
-  retryStrategy: 'exponential', // 'linear', 'exponential', 'custom'
-  maxRetryDelay: 10000,
-  
-  // Conditional retry
-  retryConditions: [
-    'element_not_found',
-    'timeout_error',
-    'network_error',
-    'stale_element_reference'
-  ],
-  
-  // Retry exclusions
-  excludeConditions: [
-    'authentication_failed',
-    'invalid_credentials',
-    'permission_denied'
-  ]
-};
-```
-
-### Stabilization Patterns
-
-```javascript
-// Wait strategies
-const waitStrategies = {
-  // Element waits
-  elementWait: {
-    timeout: 10000,
-    interval: 500,
-    condition: 'visible' // 'visible', 'clickable', 'present'
-  },
-  
-  // Page waits
-  pageWait: {
-    loadState: 'networkidle', // 'load', 'domcontentloaded', 'networkidle'
-    timeout: 30000
-  },
-  
-  // Custom waits
-  customWaits: {
-    'ajax-complete': () => {
-      return page.waitForFunction(() => {
-        return window.jQuery && !window.jQuery.active;
-      });
+```json
+{
+  "environments": {
+    "development": {
+      "url": "https://dev.your-app.com",
+      "authentication": {
+        "username": "dev@example.com",
+        "password": "dev_password"
+      },
+      "test_data": "dev_data_set",
+      "performance": "fast"
     },
-    'animation-complete': () => {
-      return page.waitForFunction(() => {
-        return !document.querySelector('.animating');
-      });
+    "staging": {
+      "url": "https://staging.your-app.com",
+      "authentication": {
+        "username": "staging@example.com",
+        "password": "staging_password"
+      },
+      "test_data": "staging_data_set",
+      "performance": "balanced"
+    },
+    "production": {
+      "url": "https://your-app.com",
+      "authentication": {
+        "username": "prod@example.com",
+        "password": "prod_password"
+      },
+      "test_data": "prod_data_set",
+      "performance": "conservative"
     }
   }
-};
+}
+```
+
+## Performance Optimization
+
+### Test Execution Optimization
+
+Optimize your test execution for better performance:
+
+<Steps>
+  <Step title="Configure Parallel Execution">
+    Enable parallel test execution:
+    - Set maximum concurrent tests
+    - Configure resource limits
+    - Monitor execution performance
+    - Optimize for your needs
+  </Step>
+  <Step title="Optimize Test Descriptions">
+    Write efficient test prompts:
+    - Focus on critical paths
+    - Remove unnecessary steps
+    - Be specific about requirements
+    - Avoid redundant validations
+  </Step>
+  <Step title="Monitor Performance">
+    Track execution metrics:
+    - Monitor execution times
+    - Track success rates
+    - Analyze failure patterns
+    - Optimize based on data
+  </Step>
+</Steps>
+
+### Performance Settings
+
+```json
+{
+  "performance": {
+    "parallel_execution": true,
+    "max_concurrent_tests": 5,
+    "execution_timeout": 300000,
+    "resource_limits": {
+      "memory": "2GB",
+      "cpu": "2 cores"
+    },
+    "optimization": {
+      "skip_unnecessary_steps": true,
+      "intelligent_waiting": true,
+      "adaptive_timeouts": true
+    }
+  }
+}
+```
+
+## Security Configuration
+
+### API Token Management
+
+Secure your API integration:
+
+<Steps>
+  <Step title="Generate API Tokens">
+    Create secure API tokens:
+    - Generate tokens in app.qa.tech
+    - Set appropriate permissions
+    - Configure token expiration
+    - Store tokens securely
+  </Step>
+  <Step title="Configure Access Control">
+    Set up access controls:
+    - Define user permissions
+    - Configure project access
+    - Set up team roles
+    - Enable audit logging
+  </Step>
+  <Step title="Monitor Security">
+    Track security metrics:
+    - Monitor API usage
+    - Track access patterns
+    - Review security logs
+    - Update security settings
+  </Step>
+</Steps>
+
+### Security Settings
+
+```json
+{
+  "security": {
+    "api_tokens": {
+      "rotation_enabled": true,
+      "rotation_interval": "30d",
+      "max_tokens_per_user": 5,
+      "permissions": ["read", "write", "execute"]
+    },
+    "access_control": {
+      "ip_whitelist": ["192.168.1.0/24"],
+      "session_timeout": 3600,
+      "mfa_required": false,
+      "audit_logging": true
+    }
+  }
+}
 ```
 
 ## Monitoring and Analytics
 
-### Test Metrics Collection
+### Test Execution Monitoring
 
-```javascript
-// Metrics configuration
-const metricsConfig = {
-  // Performance metrics
-  performance: {
-    pageLoadTime: true,
-    firstContentfulPaint: true,
-    largestContentfulPaint: true,
-    cumulativeLayoutShift: true
-  },
-  
-  // Test metrics
-  testMetrics: {
-    executionTime: true,
-    successRate: true,
-    failureRate: true,
-    flakinessScore: true
-  },
-  
-  // Custom metrics
-  customMetrics: {
-    'api-response-time': true,
-    'database-query-time': true,
-    'third-party-load-time': true
+Monitor your test execution and performance:
+
+<Steps>
+  <Step title="Configure Monitoring">
+    Set up monitoring:
+    - Enable execution tracking
+    - Configure performance metrics
+    - Set up alerts
+    - Enable detailed logging
+  </Step>
+  <Step title="Track Key Metrics">
+    Monitor important metrics:
+    - Test execution times
+    - Success/failure rates
+    - AI agent performance
+    - Resource utilization
+  </Step>
+  <Step title="Set Up Alerts">
+    Configure notifications:
+    - Test failure alerts
+    - Performance degradation
+    - Security events
+    - System status updates
+  </Step>
+</Steps>
+
+### Monitoring Configuration
+
+```json
+{
+  "monitoring": {
+    "metrics": {
+      "execution_time": true,
+      "success_rate": true,
+      "ai_performance": true,
+      "resource_usage": true
+    },
+    "alerts": {
+      "test_failures": true,
+      "performance_degradation": true,
+      "security_events": true,
+      "system_status": true
+    },
+    "reporting": {
+      "daily_reports": true,
+      "weekly_summaries": true,
+      "monthly_analytics": true,
+      "custom_reports": true
+    }
   }
-};
+}
 ```
 
-### Custom Reporting
+## Advanced Features
 
-```javascript
-// Custom report configuration
-const reportConfig = {
-  // Report formats
-  formats: ['html', 'json', 'junit', 'allure'],
-  
-  // Report content
-  content: {
-    screenshots: true,
-    videos: true,
-    logs: true,
-    performance: true,
-    customData: true
-  },
-  
-  // Report customization
-  customization: {
-    title: 'QA.tech Test Report',
-    logo: './assets/logo.png',
-    theme: 'dark',
-    charts: true,
-    filters: true
+### Custom AI Prompts
+
+Create custom prompts for specific testing scenarios:
+
+<Steps>
+  <Step title="Define Custom Prompts">
+    Create specialized prompts:
+    - Business logic testing
+    - Edge case scenarios
+    - Performance testing
+    - Security testing
+  </Step>
+  <Step title="Configure Prompt Templates">
+    Set up reusable templates:
+    - Standard test scenarios
+    - Common validation patterns
+    - Error handling tests
+    - User journey tests
+  </Step>
+  <Step title="Optimize Prompt Effectiveness">
+    Improve prompt quality:
+    - Test prompt variations
+    - Measure effectiveness
+    - Refine based on results
+    - Document best practices
+  </Step>
+</Steps>
+
+### Custom Prompt Configuration
+
+```json
+{
+  "custom_prompts": {
+    "login_test": {
+      "description": "Test user login functionality",
+      "prompt": "Test the login form by entering valid credentials and verifying successful authentication",
+      "validation": ["success_message", "dashboard_access", "session_established"],
+      "edge_cases": ["invalid_credentials", "empty_fields", "special_characters"]
+    },
+    "checkout_test": {
+      "description": "Test e-commerce checkout process",
+      "prompt": "Complete the checkout process by adding items to cart, entering shipping information, and processing payment",
+      "validation": ["order_confirmation", "email_receipt", "payment_processed"],
+      "edge_cases": ["invalid_payment", "missing_address", "out_of_stock"]
+    }
   }
-};
+}
 ```
 
-## Security and Access Control
+### Integration with External Tools
 
-### API Key Management
+Connect QA.tech with your existing tools:
 
-```javascript
-// API key configuration
-const apiKeyConfig = {
-  // Key rotation
-  rotation: {
-    enabled: true,
-    interval: '30d', // 30 days
-    gracePeriod: '7d' // 7 days
-  },
-  
-  // Key permissions
-  permissions: {
-    read: true,
-    write: true,
-    delete: false,
-    admin: false
-  },
-  
-  // Key scoping
-  scope: {
-    projects: ['proj_123', 'proj_456'],
-    environments: ['staging', 'production'],
-    features: ['tests', 'reports']
-  }
-};
-```
+<Steps>
+  <Step title="Configure Issue Tracking">
+    Set up issue integration:
+    - Connect to Jira, Linear, or Trello
+    - Configure issue creation
+    - Set up status updates
+    - Enable automatic reporting
+  </Step>
+  <Step title="Set Up Notifications">
+    Configure notifications:
+    - Email notifications
+    - Slack integration
+    - Webhook support
+    - Custom notifications
+  </Step>
+  <Step title="Enable Data Export">
+    Configure data export:
+    - Test result exports
+    - Performance reports
+    - Analytics data
+    - Custom exports
+  </Step>
+</Steps>
 
-### IP Access Control
+## Troubleshooting Advanced Issues
 
-```javascript
-// IP access control
-const ipAccessControl = {
-  // Allowed IPs
-  allowedIPs: [
-    '192.168.1.0/24',
-    '10.0.0.0/8',
-    '172.16.0.0/12'
-  ],
-  
-  // Blocked IPs
-  blockedIPs: [
-    '192.168.1.100',
-    '10.0.0.50'
-  ],
-  
-  // Geolocation restrictions
-  geoRestrictions: {
-    allowedCountries: ['US', 'CA', 'GB'],
-    blockedCountries: ['CN', 'RU']
-  }
-};
-```
+### Common Advanced Problems
+
+**Problem:** AI agent performance is inconsistent.
+
+**Solutions:**
+
+<Steps>
+  <Step title="Optimize AI Configuration">
+    Adjust AI settings:
+    - Increase timeout values
+    - Configure retry strategies
+    - Set up adaptive behavior
+    - Enable learning features
+  </Step>
+  <Step title="Improve Application Accessibility">
+    Make your app AI-friendly:
+    - Add descriptive element labels
+    - Use semantic HTML
+    - Provide clear navigation
+    - Ensure consistent UI patterns
+  </Step>
+  <Step title="Monitor and Adjust">
+    Track and optimize:
+    - Monitor AI performance
+    - Analyze failure patterns
+    - Adjust configuration
+    - Document improvements
+  </Step>
+</Steps>
+
+### Performance Tuning
+
+**Problem:** Tests are taking too long to execute.
+
+**Solutions:**
+
+<Steps>
+  <Step title="Optimize Test Descriptions">
+    Write more efficient prompts:
+    - Focus on critical paths
+    - Remove unnecessary steps
+    - Be specific about requirements
+    - Use efficient validation
+  </Step>
+  <Step title="Configure Parallel Execution">
+    Enable concurrent testing:
+    - Set up parallel execution
+    - Configure resource limits
+    - Monitor performance
+    - Optimize settings
+  </Step>
+  <Step title="Improve Application Performance">
+    Optimize your application:
+    - Reduce page load times
+    - Optimize server responses
+    - Implement caching
+    - Monitor performance
+  </Step>
+</Steps>
 
 ## Conclusion
 
-Advanced configuration in QA.tech provides the flexibility and control needed for complex testing scenarios. By leveraging these features, you can:
+Advanced configuration in QA.tech allows you to fine-tune the AI agent behavior, optimize performance, and integrate with your existing development workflow. By leveraging these features, you can:
 
-- **Optimize test execution for your specific environment**
-- **Integrate seamlessly with existing CI/CD pipelines**
-- **Handle complex enterprise requirements**
-- **Monitor and analyze test performance**
-- **Implement robust security measures**
+- **Optimize AI agent performance for your specific application**
+- **Integrate seamlessly with your CI/CD pipeline**
+- **Monitor and improve test execution**
+- **Implement enterprise-grade security and compliance**
 
 Start with basic configuration and gradually add advanced features as your needs evolve.
 
 ## Next Steps
 
 - **[Environment Setup](/configuration/environment-setup)** - Set up different testing environments
-- **[CI/CD Integration](/configuration/github)** - Integrate with your development workflow
+- **[GitHub Integration](/configuration/github)** - Configure CI/CD integration
 - **[Troubleshooting](/best-practices/troubleshooting)** - Resolve configuration issues
-- **[Performance Optimization](/core-concepts/output-state-optimization)** - Optimize test execution 
+- **[Test Results](/best-practices/test-results)** - Analyze AI-generated results 
